@@ -6,6 +6,7 @@
 	new bindable functions, 'findnext' and 'findprevious', which repeat
 	the last search command in a fixed direction without prompting.
 	* src/global.c (shortcut_init): Tweak a string.
+	* src/search.c, src/move.c: Improve a few of the comments.
 
 2015-07-25  Benno Schulenberg  <bensberg@justemail.net>
 	* src/global.c (shortcut_init, strtosc), src/files.c (savefile),
